--- a/speakers/index.html
+++ b/speakers/index.html
@@ -389,14 +389,14 @@
         <div class="features-box speaker-box col-sm-6 col-md-4">
           <div class="overflow-hidden position-relative width-100">
             <div class="img-wrapper">
-              <img src="../res/images/speakers/soon.png" alt=""/>
+              <img src="../res/images/speakers/rahul.jpg" alt=""/>
             </div>
             <!-- //.img-wrapper -->
 
             <div class="bg-black no-padding-rl padding-6 position-relative text-center">
               <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-white text-medium text-uppercase">
                 <!-- Enter Speaker Name -->
-                Coming Soon!
+                Rahul Bhatnagar
               </span>
             </div>
             <!-- //.bg-black -->
@@ -407,10 +407,12 @@
                   <div class="display-table-cell no-padding-tb padding-11 vertical-align-middle text-uppercase text-white">
                     <span class="display-block font-family-alt letter-spacing-1 title-small">
                       <!-- Enter Speaker Name --> 
+                      Rahul Bhatnagar
                     </span>
                     <br>
                     <span class="display-block font-weight-700 letter-spacing-1 text-medium">
                       <!-- Designation : Film-maker &amp; Journalist --> 
+                      Digital Entrepreneur & Sales Mentor
                     </span>
                   </div>
                   <!-- //.display-table-cell -->
