form fields updated

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               </li>
               <li class="bg-base-color">
                 <a href="/register/" class="line-height-unset width-100">
-                  Attendee Registration
+                  Register
                 </a>
               </li>
             </ul>
