--- a/register/index.html
+++ b/register/index.html
@@ -19,6 +19,7 @@
     <link rel="shortcut icon" href="../res/images/favicon.ico" />
     <link rel="icon" href="../res/images/favicon.ico" />
     <link rel="apple-touch-icon" href="../res/images/favicon.ico" />
+
     <meta
       name="description"
       content="Attendee Registration for TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology."
@@ -277,7 +278,7 @@
               <span
                 class="display-block font-weight-700 letter-spacing-1 text-large text-uppercase"
               >
-                Speaker Registration
+              Attendee Registration
               </span>
               <div class="row margin-2 no-margin-rl no-margin-bottom">
                 <p
@@ -297,7 +298,7 @@
                 <div class="row margin-4 no-margin-rl">
                   <label for="name"
                     >Full Name <span style="color: red">*</span></label
-                  >
+                  >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                   <input
                     type="text"
                     title="Enter Your Name"
@@ -306,10 +307,10 @@
                     id="name"
                     class="required"
                     required
-                  />
+                  /> <br>
                   <label for="email"
-                    >Email Address <span style="color: red">*</span></label
-                  >
+                    >Email id <span style="color: red" class="textarea">*</span></label
+                  >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                   <input
                     type="email"
                     title="Enter Your Email Address"
@@ -319,9 +320,12 @@
                     class="required email"
                     required
                   />
+                  <br>
+                  
                   <label for="contact"
                     >Contact Number <span style="color: red">*</span></label
                   >
+                  
                   <input
                     type="text"
                     pattern="[+9870][0-9]{9,12}"
