--- a/register/index.html
+++ b/register/index.html
@@ -681,6 +681,7 @@
 
     <script type="text/javascript">
       document.getElementById("mc-form").onsubmit = function () {
+        noe = 0;
         var okay = document.getElementById("mc-form").getAttribute("action");
         if (okay != "javascript: void(0)") {
           return false;
