--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
                         SIES Graduate School of Technology, Nerul, Navi Mumbai
                       </h4>
                       <br />
-                      <!-- <a href="/register/" class="btn btn-base-color sm-btn-medium btn-large">
-                      Register Now
-                    </a> -->
+                      <a href="/register/" class="btn btn-outline-white sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl">
+                      Attendee Registration
+                    </a>
                     </div>
                     <!-- //.col-md-10 -->
                   </div>
@@ -274,9 +274,9 @@
                         SIES Graduate School of Technology, Nerul, Navi Mumbai
                       </h4>
                       <br />
-                      <!-- <a href="/register/" class="btn btn-base-color sm-btn-medium btn-large">
-                      Register Now
-                    </a> -->
+                       <a href="/register/" class="btn btn-outline-white sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl">
+                      Attendee Registration
+                    </a>
                     </div>
                     <!-- //.col-md-10 -->
                   </div>
@@ -337,6 +337,9 @@
                         SIES Graduate School of Technology, Nerul, Navi Mumbai
                       </h4>
                       <br />
+                      <a href="/register/" class="btn btn-outline-white sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl">
+                      Attendee Registration
+                    </a>
                     </div>
                     <!-- //.col-md-10 -->
                   </div>
