--- a/register/index.html
+++ b/register/index.html
@@ -425,7 +425,7 @@
                     type="button"
                     title="Click for a new Pattern"
                   >
-                    New Capatcha Pattern
+                    New Captcha Pattern
                   </button>
                 </div>
 
