--- a/speakers/index.html
+++ b/speakers/index.html
@@ -716,7 +716,7 @@
           <div class="features-box speaker-box col-sm-6 col-md-4">
             <div class="overflow-hidden position-relative width-100">
               <div class="img-wrapper">
-                <img src="../res/images/speakers/soon.png" alt="" />
+                <img src="../res/images/speakers/mahesh_kale.jpg" alt="" />
               </div>
               <!-- //.img-wrapper -->
 
@@ -727,7 +727,7 @@
                   class="display-block font-family-alt font-weight-700 letter-spacing-2 text-white text-medium text-uppercase"
                 >
                   <!-- Enter Speaker Name -->
-                  Coming Soon
+                  Mahesh Kale
                 </span>
               </div>
               <!-- //.bg-black -->
@@ -743,14 +743,15 @@
                       <span
                         class="display-block font-family-alt letter-spacing-1 title-small"
                       >
-                        Coming Soon
+                        Mahesh Kale
                       </span>
                       <br />
                       <span
                         class="display-block font-weight-700 letter-spacing-1 text-medium"
                       >
                         <!-- Designation : Film-maker &amp; Journalist -->
-                        Coming Soon
+                        Indian Classical Vocalist - Performer / Reformer /
+                        Educator
                       </span>
                     </div>
                     <!-- //.display-table-cell -->
