added active classes

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3"
                       >
                         24<sup>th</sup> October, 2020<br />
-                        10 AM
+                        10:00 AM
                       </h3>
                       <p
                         class="font-family-alt text-white sm-title-small title-medium"
@@ -267,7 +267,7 @@
                         class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3"
                       >
                         24<sup>th</sup> October, 2020<br />
-                        10 AM
+                        10:00 AM
                       </h3>
                       <p
                         class="font-family-alt text-white sm-title-small title-medium"
@@ -334,7 +334,7 @@
                         class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3"
                       >
                         24<sup>th</sup> October, 2020<br />
-                        10 AM
+                        10:00 AM
                       </h3>
                       <p
                         class="font-family-alt text-white sm-title-small title-medium"
@@ -468,7 +468,7 @@
                 class="btn btn-outline-white sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl"
                 disabled
               >
-                Going Live Soon
+                Going Live On <br> 24<sup>th</sup> October 2020 <br>10:00 AM
               </a>
             </div>
             <!-- //.col-md-8 -->
@@ -666,7 +666,7 @@
               class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2"
             >
               24<sup>th</sup> October, 2020<br />
-              10 AM
+              10:00 AM
             </p>
           </div>
           <!-- //.col-sm-4 -->
