--- a/our-team/index.html
+++ b/our-team/index.html
@@ -134,7 +134,7 @@
               <li>
                 <a href="/speakers/" class="line-height-unset">Speakers</a>
               </li>
-              <li>
+              <li class="active">
                 <a href="/our-team/" class="line-height-unset">Our Team</a>
               </li>
               <li>
@@ -1166,7 +1166,7 @@
               class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2"
             >
               24<sup>th</sup> October, 2020<br />
-              10 AM
+              10:00 AM
             </p>
           </div>
           <!-- //.col-sm-4 -->
