--- a/register/index.html
+++ b/register/index.html
@@ -247,6 +247,9 @@
               <li>
                 <a href="/contact/" class="line-height-unset">Contact Us</a>
               </li>
+              <li class="active">
+                <a href="/register/" class="line-height-unset">Contact Us</a>
+              </li>
             </ul>
           </div>
           <!-- //.navbar-collapse -->
