--- a/contact/index.html
+++ b/contact/index.html
@@ -215,7 +215,7 @@
               <li>
                 <a href="/our-team/" class="line-height-unset">Our Team</a>
               </li>
-              <li>
+              <li class="active">
                 <a href="/contact/" class="line-height-unset">Contact Us</a>
               </li>
               <li class="bg-base-color">
@@ -479,7 +479,7 @@
               class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2"
             >
               24<sup>th</sup> October, 2020<br />
-              10 AM
+              10:00 AM
             </p>
           </div>
           <!-- //.col-sm-4 -->
