--- a/speakers/index.html
+++ b/speakers/index.html
@@ -131,7 +131,7 @@
               class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700"
             >
               <li><a href="/about/" class="page-scroll">About</a></li>
-              <li>
+              <li class="active">
                 <a href="/speakers/" class="line-height-unset">Speakers</a>
               </li>
               <li>
@@ -789,7 +789,7 @@
               class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2"
             >
               24<sup>th</sup> October, 2020<br />
-              10 AM
+              10:00 AM
             </p>
           </div>
           <!-- //.col-sm-4 -->
