--- a/Privacy/privacy.html
+++ b/Privacy/privacy.html
@@ -96,7 +96,7 @@
 
         <div id="navbar" class="navbar-collapse collapse col-lg-9 pull-right">
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
-            <li><a href="/about/" class="page-scroll">About</a></li>
+            <li><a href="/about/" class="line-height-unset">About</a></li>
             <li><a href="/speakers/" class="line-height-unset">Speakers</a></li>
             <li><a href="/our-team/" class="line-height-unset">Our Team</a></li>
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
