--- a/contact/index.html
+++ b/contact/index.html
@@ -208,7 +208,7 @@
             <ul
               class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700"
             >
-              <li><a href="/about" class="page-scroll">About</a></li>
+              <li><a href="/about" class="line-height-unset">About</a></li>
               <li>
                 <a href="/speakers/" class="line-height-unset">Speakers</a>
               </li>
@@ -216,7 +216,7 @@
                 <a href="/our-team/" class="line-height-unset">Our Team</a>
               </li>
               <li class="active">
-                <a href="/contact/" class="line-height-unset">Contact Us</a>
+                <a href="/contact/" class="page-scroll">Contact Us</a>
               </li>
               <li class="bg-base-color">
                 <a href="/register/" class="line-height-unset width-100">
