--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <ul
               class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700"
             >
-              <li><a href="/about/" class="page-scroll">About</a></li>
+              <li><a href="/about/" class="line-height-unset">About</a></li>
               <li>
                 <a href="/speakers/" class="line-height-unset">Speakers</a>
               </li>
