--- a/our-team/index.html
+++ b/our-team/index.html
@@ -130,12 +130,12 @@
             <ul
               class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700"
             >
-              <li><a href="/about/" class="page-scroll">About</a></li>
+              <li><a href="/about/" class="line-height-unset">About</a></li>
               <li>
                 <a href="/speakers/" class="line-height-unset">Speakers</a>
               </li>
               <li class="active">
-                <a href="/our-team/" class="line-height-unset">Our Team</a>
+                <a href="/our-team/" class="page-scroll">Our Team</a>
               </li>
               <li>
                 <a href="/contact/" class="line-height-unset">Contact Us</a>
