--- a/register/index.html
+++ b/register/index.html
@@ -237,7 +237,7 @@
             <ul
               class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700"
             >
-              <li><a href="/about/" class="page-scroll">About</a></li>
+              <li><a href="/about/" class="line-height-unset">About</a></li>
               <li>
                 <a href="/speakers/" class="line-height-unset">Speakers</a>
               </li>
@@ -248,7 +248,7 @@
                 <a href="/contact/" class="line-height-unset">Contact Us</a>
               </li>
               <li class="active">
-                <a href="/register/" class="line-height-unset">Contact Us</a>
+                <a href="/register/" class="page-scroll">Register</a>
               </li>
             </ul>
           </div>
