added live link

--- a/Privacy/privacy.html
+++ b/Privacy/privacy.html
@@ -197,7 +197,7 @@
         <!-- //.col-sm-4 -->
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
-          <a href="javascript: void(0)" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl" disabled>
+          <a href="https://youtu.be/MsWcV0A6IwI" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
             <span>YouTube Live<br>Link</span>
           </a>
         </div>
