--- a/our-team/index.html
+++ b/our-team/index.html
@@ -1195,9 +1195,8 @@
             class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center"
           >
             <a
-              href="javascript: void(0)"
+              href="https://youtu.be/MsWcV0A6IwI"
               class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl"
-              disabled
             >
               <span>YouTube Live<br />Link</span>
             </a>
