--- a/index.html
+++ b/index.html
@@ -464,9 +464,8 @@
               </p>
               <br />
               <a
-                href="javascript: void(0)"
+                href="https://youtu.be/MsWcV0A6IwI"
                 class="btn btn-outline-white sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl"
-                disabled
               >
                 Going Live On <br> 24<sup>th</sup> October 2020 <br>10:00 AM
               </a>
@@ -695,9 +694,8 @@
             class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center"
           >
             <a
-              href="javascript: void(0)"
+              href="https://youtu.be/MsWcV0A6IwI"
               class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl"
-              disabled
             >
               <span>YouTube Live<br />Link</span>
             </a>
