--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
               </p>
               <br />
               <a
-                href="https://youtu.be/MsWcV0A6IwI"
+                href="https://youtu.be/MsWcV0A6IwI" onclick="window.open(this.href,'_blank');return false;"
                 class="btn btn-outline-white sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl"
               >
                 Going Live On <br> 24<sup>th</sup> October 2020 <br>10:00 AM
@@ -694,7 +694,7 @@
             class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center"
           >
             <a
-              href="https://youtu.be/MsWcV0A6IwI"
+              href="https://youtu.be/MsWcV0A6IwI" onclick="window.open(this.href,'_blank');return false;"
               class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl"
             >
               <span>YouTube Live<br />Link</span>
