--- a/speakers/index.html
+++ b/speakers/index.html
@@ -818,7 +818,7 @@
             class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center"
           >
             <a
-              href="https://youtu.be/MsWcV0A6IwI"
+              href="https://youtu.be/MsWcV0A6IwI" onclick="window.open(this.href,'_blank');return false;"
               class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl"
             >
               <span>YouTube Live<br />Link</span>
