--- a/register/index.html
+++ b/register/index.html
@@ -266,7 +266,7 @@
         <div id="form-section">
           <div class="row no-padding-rl">
             <div class="col-md-12">
-              <h1
+              <!-- <h1
                 class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2"
               >
                 Register for TEDxSIESGST
@@ -274,11 +274,11 @@
               <span
                 class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"
               ></span>
-            </div>
+            </div> -->
           </div>
 
           <div class="container">
-            <form
+            <!-- <form
               action=""
               method="post"
               id="mc-form"
@@ -346,7 +346,7 @@
                     class="required"
                     required
                   />
-               <!--      <label for="work"
+                    <label for="work"
                     >Work Description <span style="color: red">*</span></label
                   >
                   <input
@@ -404,7 +404,7 @@
                     id="link"
                     class="required"
                     required
-                  ></textarea> --> 
+                  ></textarea> 
                   <canvas
                     id="mc-canvas"
                     style="margin-left: -0px"
@@ -458,7 +458,41 @@
                   >
                 </div>
               </div>
-            </form>
+            </form> -->
+
+            <div id="success-section">
+              <div class="row no-padding-rl">
+                <div class="col-md-12">
+                  <h1
+                    class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2"
+                  >
+                    Sorry!
+                  </h1>
+                  <span
+                    class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"
+                  ></span>
+                </div>
+                <!-- //.col-md-12 -->
+              </div>
+              <!-- //.row -->
+
+              <div class="container">
+                <span
+                  class="display-block font-weight-700 letter-spacing-1 text-large text-uppercase"
+                >
+                  No TEDx SIESGST Events scheduled currently
+                </span>
+                <div class="row margin-2 no-margin-rl no-margin-bottom">
+                  <p
+                    class="font-family-alt sm-text-large text-extra-large text-gray-dark-2"
+                  >
+                    We appreciate your interest. Please visit the website later to know about future events.
+                  </p>
+                  
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       
