Update meta tag

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <meta name="title" content="TEDxSIESGST">
     <meta name="description"
         content="TEDxSIESGST is providing a platform for creative and innovative minds who could voice out their opinions to adapt and tackle not only the current scenario but also similar circumstances that could arise in future.">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://tedxsiesgst.in/images/logos/dark.png">
     <meta property="og:url" content="https://tedxsiesgst.in/">
     <meta property="og:site_name" content="TEDxSIESGST">
 
     <meta name="twitter:title" content="TEDxSIESGST">
     <meta name="twitter:description"
         content="TEDxSIESGST provides a platform for creative and innovative minds who could voice out their opinions to adapt and tackle not only the current scenario but also similar circumstances that could arise in future.">
-    <meta name="twitter:image" content="">
+    <meta name="twitter:image" content="https://tedxsiesgst.in/images/logos/dark.png">
     <meta name="twitter:image:alt" content="TEDxSIESGST">
-    <meta name="twitter:card" content="">
+    <meta name="twitter:card" content="https://tedxsiesgst.in/images/logos/dark.png">
     <meta name="twitter:site" content="@TEDxSIESGST">
 
-    <meta name="image" property="og:image" content="">
+    <meta name="image" property="og:image" content="https://tedxsiesgst.in/images/logos/dark.png">
     <meta name="author" content="TEDxSIESGST">
 
 
