--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
         </h2>
     </div>
     <div class="countdown_container mt-5">
-        <div class="countdown styled text-white">
-
-        </div>
-        <!-- <div class="container h-100" style="height: 400px !important;">
+        <div class="container h-100" style="height: 400px !important;">
             <div class="row h-100 align-items-center justify-content-center">
                 <div class="col-lg-8 text-white text-center">
                     <h2>
@@ -60,7 +57,7 @@
                     </button>
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
 
 
