--- a/apply.html
+++ b/apply.html
@@ -46,11 +46,14 @@
     <div class="container pb-5 text-white">
         <div class="row justify-content-center">
             <div class="col">
-                <h3 class="text-white my-4">
+                <h3 class="text-white mt-4">
                     <strong style="font-size: 30px; border: none;">
                         Team Application form
                     </strong>
                 </h3>
+                <p class="text-white mb-4">
+                    Exclusive for SE and TE students of SIES GST
+                </p>
                 <form method="post" id="applicationForm" name="applicationForm">
                     <div class="mb-3">
                         <label for="name" class="form-label">
