application link added

--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
                 <img src="./images/logos/dark.png" alt="" class="w-100">
             </div>
         </div>
-        <h2 class="text-white mt-5">
-            Applications for TEDxSIESGST 2022 team will open in...
-        </h2>
     </div>
     <div class="countdown_container mt-5">
         <div class="container h-100" style="height: 400px !important;">
@@ -52,7 +49,7 @@
                     <h2>
                         Applications for TEDxSIESGST 2022 team are now Open!
                     </h2>
-                    <button class="text-white mt-3">
+                    <button class="text-white mt-3" onclick="window.location.href = 'https://tedxsiesgst.in/apply';">
                         Apply Now
                     </button>
                 </div>
